--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "author": "ContainerShip Developers <developers@containership.io>",
   "license": "GPL-3.0",
   "dependencies": {
+    "async": "^1.5.0",
     "containership.plugin": "^0.3.0",
-    "lodash": "^3.0.0",
-    "request": "^2.67.0"
+    "lodash": "^3.0.0"
   },
   "keywords": [
     "logs",
