--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "Official logging plugin for ContainerShip",
   "main": "application.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha"
   },
   "author": "ContainerShip Developers <developers@containership.io>",
   "license": "GPL-3.0",
   "dependencies": {
     "async": "^1.5.0",
     "containership.plugin": "^0.3.0",
-    "lodash": "^3.0.0"
+    "lodash": "^3.0.0",
+    "mocha": "^2.4.5"
   },
   "keywords": [
     "logs",
