--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "containership.plugin.logs",
   "version": "1.1.4",
   "description": "Official logging plugin for ContainerShip",
-  "main": "application.js",
+  "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha",
     "lint": "./node_modules/.bin/eslint ."
